# SecMind

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PRODUCT_INTRODUCTION.md  README.md  ROADMAP-2.0.md  SecMind AI安全运营平台产品白皮书.md  SecMind上线前全面Review报告.md  SecMind产品迭代计划.md  ai-api-docs.html  audit-deep.py  audit-full.py  audit-light-theme.py  audit-step1.py  compare-layouts.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  quick-deploy.sh  recon_site.py  secmind-screenshot.py  secmind-user-guide.html  test_buttons.py  test_click_event.py  test_click_signals.py  test_console.py  test_cs_nav.py  test_dashboard_errors.py  test_debug.py  test_direct_nav.py  test_fiber.py  test_fresh.py  test_html_structure.py  test_link_detail.py  test_nav2.py  test_nav3.py  test_nav4.py  test_nav5.py  test_nav6.py  (+23 more)
Secmind-main 2/secmind-investigator/: .gitignore  Makefile  pyproject.toml
Secmind-main 2/secmind-investigator/src/secmind_investigator/: __init__.py  runner.py
Secmind-main 2/secmind-investigator/src/secmind_investigator/capabilities/: __init__.py
Secmind-main 2/secmind-investigator/src/secmind_investigator/core/: __init__.py  capability.py  context.py  errors.py  registry.py  schema.py  utils.py
Secmind-main 2/secmind-investigator/src/secmind_investigator/datasources/: edr.py  (+11 more)
Secmind-main 2/secmind-investigator/tests/: conftest.py
Secmind-main 2/secmind-investigator/tests/fixtures/: phishing_scenario.json
Secmind-main 2/secmind-investigator/tests/integration/: test_phishing_orchestration.py
Secmind-main 2/secmind-investigator/tests/unit/: test_runner.py
(+539 files in other folders)
