[project]
name = "secmind-investigator"
version = "0.0.1"
description = "Atomic security investigation capabilities for Secmind"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "httpx>=0.27",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.9",
    "opentelemetry-sdk>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=secmind_investigator --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
